# openapi/specs/relationship.yml
@@ -3,34 +3,6 @@ tags:
     description: User relationship database endpoint
 
 paths:
-  # /relationship/sendFriendRequest
-  sendFriendRequest:
-    post:
-      tags:
-        - User Relationship
-      summary: Send/Accept a friend request
-      security:
-        - AccessToken: []
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - recipientId
-              properties:
-                recipientId:
-                  type: string
-                  example: fgd9s033n-f42fdnskfrlkg-fdg431ffgf-f4wsdf4yh
-      responses:
-        200:
-          description: The friend request was sent/accepted
-        400:
-          description: Validation error
-        500:
-          description: An internal error occurred
-
   # /relationship/denyFriendRequest
   denyFriendRequest:
     post:
