# src/adapters/event-handlers/implementations/index.ts
@@ -1,3 +1,4 @@
 export { OnConnectEventHandler } from "./on-connect.handler";
 export { OnDisconnectEventHandler } from "./on-disconnect.handler";
 export { SendDirectMessageEventHandler } from "./send-direct-message.handler";
+export { SendFriendRequestEventHandler } from "./send-friend-request.handler";
